Make input type=text width bigger (Rick.Ju@sun.com's patch, bug 92980), r=jkeiser@netscape.com, sr=kin@netscape.com